# luna-appmanager

./: CMakeLists.txt  README.md  device-known.pri  sysmgr.pro
Src/: Main.cpp
Src/base/: AmbientLightSensor.cpp  BackupManager.cpp  BootManager.cpp  BootManager.h  DisplayManager.cpp  DisplayManager.h  DisplayStates.cpp  EventReporter.cpp  EventReporter.h  InputEventMonitor.cpp  InputEventMonitor.h  LsmUtils.cpp  MemoryMonitor.cpp  MemoryMonitor.h  SuspendBlocker.cpp  SystemService.cpp
Src/base/application/: ApplicationDescription.cpp  ApplicationDescription.h  ApplicationInstaller.cpp  ApplicationInstaller.h  ApplicationManager.cpp  ApplicationManager.h  ApplicationManagerService.cpp  ApplicationStatus.cpp  CmdResourceHandlers.cpp  LaunchPoint.cpp  MimeSystem.cpp  PackageDescription.cpp  PackageDescription.h  ServiceDescription.cpp
Src/base/settings/: DeviceInfo.cpp  DeviceInfo.h  Preferences.cpp
Src/remote/: ApplicationProcessManager.cpp  ApplicationProcessManager.h  NativeAppManager.cpp  NativeAppManager.h  WebAppMgrProxy.cpp  WebAppMgrProxy.h
conf/: defaultPreferences.txt  luna-a500.conf  luna-grouper.conf  luna-maguro.conf  luna-mako.conf  luna-qemux86.conf  luna-tuna.conf  luna.conf
doc/: Doxyfile.in
files/sysbus/: luna-appmanager.api.json  luna-appmanager.groups.json  luna-appmanager.perm.json  luna-appmanager.role.json.in  luna-appmanager.service.in
files/systemd/: LunaAppManager.service  luna-appmanager.service
scripts/: ApplicationInstallerUtility  app-install  pmServicePostRemove.sh
service/: com.palm.luna.json.prv  com.palm.luna.json.pub  com.palm.luna.service.prv  com.palm.luna.service.pub  luna-appmanager.json.prv  luna-appmanager.json.pub  luna-appmanager.service.prv
